# start-hack-2024

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml  readme.md
backend/: Dockerfile  requirements.txt
backend/celery/beat/: start
backend/celery/flower/: start
backend/celery/worker/: start
backend/docker/: entrypoint.prod.sh  entrypoint.sh  startup.sh
backend/nginx/: nginx.conf
backend/src/: gunicorn.conf.py  package-lock.json
backend/src/api/: celery.py  logging.py  middlewares.py  settings.py  urls.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: sidenav.tsx
frontend/components/dashboard/: AddHunterDialog.tsx  OvoHuntersTable.tsx
frontend/components/shadcn/: data-table.tsx
frontend/components/sidenav/: nav-links.tsx  sidenav.tsx
frontend/lib/interfaces/: ovo-hunter.ts
hackathon/: .pre-commit-config.yaml  pyproject.toml
hackathon/hackathon/: main.py
hackathon/hackathon/backend/: main.py
hackathon/hackathon/frontend/: main.py  router_frame.js
hackathon/src/: main.py
hackathon/src/frontend/: app.py  main.py  router.py
hackathon/src/frontend/src/pages/: home.py
hackathon/tests/: __init__.py
keycloak/: Dockerfile  Jenkinsfile  README.md  Taskfile.yml  renovate.json
keycloak/docker/: entrypoint.sh
keycloak/keycloak-config/: realm-tars.json
keycloak/theme/login/: login-reset-password.ftl  (+5 more)
res/: index.py
traefik/: dynamic.yml  traefik.yml
traefik/ssl/: _wildcard.dev.ovo-hunters-key.pem  _wildcard.dev.ovo-hunters.pem
(+45 files in other folders)
